--- a/package.json
+++ b/package.json
@@ -6,6 +6,32 @@
     "type": "git",
     "url": "git+https://github.com/QxQstar/dmallmax-vue-preset.git"
   },
+  "scripts": {
+    "lint": "eslint --fix generator/**/*.js",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^8.1.0",
+    "babel-eslint": "^10.0.3",
+    "conventional-changelog-cli": "^2.0.23",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.1.2",
+    "husky": "^3.0.4",
+    "lint-staged": "^8.1.5"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "generator/**/*.{js,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
   "author": "何遇",
   "license": "ISC",
   "bugs": {
